--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "php": ">=5.5",
     "doctrine/dbal": "~2.4",
     "granam/strict-object": "dev-master",
-    "granam/tools": "dev-master"
+    "granam/tools": "dev-master",
+    "granam/string": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.4",
