--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,11 @@
     "doctrine/dbal": "~2.4",
     "granam/strict-object": "dev-master",
     "granam/tools": "dev-master",
-    "granam/string": "dev-master"
+    "granam/string": "dev-master",
+    "doctrineum/self-registering-type": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.4",
+    "phpunit/phpunit": ">=4.4",
     "mockery/mockery": "dev-master"
   },
   "minimum-stability": "dev",
