--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "doctrineum/self-registering-type": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=4.4",
+    "phpunit/phpunit": "~5.0",
     "mockery/mockery": "~0.9"
   },
   "minimum-stability": "dev",
