--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,13 @@
   "require": {
     "php": ">=7.0",
     "doctrine/dbal": "~2.4",
-    "granam/strict-object": "dev-master",
-    "granam/tools": "dev-master",
-    "granam/string": "dev-master",
-    "doctrineum/self-registering-type": "dev-master"
+    "granam/strict-object": "^3.0",
+    "granam/tools": "^2.0",
+    "granam/string": "^2.0",
+    "doctrineum/self-registering-type": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
     "mockery/mockery": "~0.9"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  }
 }
