--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,16 @@
     }
   },
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "doctrine/dbal": "~2.4",
-    "granam/strict-object": "dev-master",
-    "granam/tools": "dev-master",
-    "granam/string": "dev-master",
-    "doctrineum/self-registering-type": "dev-master"
+    "granam/strict-object": "^3.0",
+    "granam/tools": "^3.0",
+    "granam/string": "^3.0",
+    "doctrineum/self-registering-type": "^2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "mockery/mockery": "~0.9"
+    "phpunit/phpunit": "~7.0",
+    "mockery/mockery": "~1.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
